# benchmark-rust-vs-dotnet

./: .gitignore  LICENSE  PRD.md  README.md
csharp_bench/: Program.cs  csharp_bench.csproj
csharp_bench/Benchmarks/: HashMapBenchmark.cs  JsonBenchmark.cs  MatrixBenchmark.cs  ParsingBenchmark.cs  PrimeBenchmark.cs  SortingBenchmark.cs
csharp_bench/Core/: HashMapEngine.cs  JsonEngine.cs  MatrixEngine.cs  ParseEngine.cs  PrimeEngine.cs  SortEngine.cs
results/: summary.md
rust_bench/: Cargo.toml
rust_bench/benches/: benchmark_suite.rs
rust_bench/src/: hashmap_ops.rs  json_ops.rs  lib.rs  matrix.rs  parsing.rs  primes.rs  sorting.rs
