[package]
name = "rust_bench"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bench"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark_suite"
harness = false
